# isf

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  RELEASES.md  SECURITY.md  requirements.txt  setup.cfg  setup.py
.github/: release.yml
docs/reference/: algorithms_base_pak.html  algorithms_lib_pak.html  analysis_pak.html  core_pak.html  genindex.html  index.html  metrics_pak.html  objects.inv  py-modindex.html  search.html  searchindex.js  utils_pak.html
docs/reference/_modules/: index.html
docs/reference/_sources/: algorithms_base_pak.rst.txt  algorithms_lib_pak.rst.txt  analysis_pak.rst.txt  core_pak.rst.txt  index.rst.txt  metrics_pak.rst.txt  utils_pak.rst.txt
docs/reference/_static/: documentation_options.js
examples/: tutorial.ipynb  utils.py
patches/: reject_option_classification.patch
src/fair_downsampling/: adult.csv  fair_downsampling_tutorial.ipynb  fairdownsampling.py  license of Adult dataset.txt  requirements.txt  test_fair_downsampling.py
src/fd/: test_fair_downsampling.py
src/fo/: Fair Oversampling guide.ipynb  fairoversampling.py
src/isf/aif360_patches/: __init__.py  apply_patches.sh  structured_dataset.patch
src/isf/algorithms/: adversarial_debiasing.py  equalized_odds_postprocessing.py  (+2 more)
tests/: README.md  prepare_test.sh  stream.py  test_isf.py  testutils.py  unit_test.py  unittest.py
tests/result/: test01_result_combattr.csv  test01_result_singleattr.csv  test02_result_combattr.csv  test02_result_singleattr.csv  test03_result_combattr.csv  test03_result_singleattr.csv  test04_result_combattr.csv  test04_result_singleattr.csv  test05_result_combattr.csv  test05_result_singleattr.csv
(+23 files in other folders)
