[metadata]
name = Intersectional-Fairness
version = 0.1.0
description = Intersectional Fairness (ISF) is a bias detection and mitigation technology for intersectional bias, which combinations of multiple protected attributes causes. 
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
author = Fujitsu Limited
author_email = fj-isf-contact@dl.jp.fujitsu.com

[options]
zip_safe = false
include_package_data = True
python_requires = >=3.8
package_dir =
    =src
packages = find:
install_requires = 
    aif360[LawSchoolGPA]
    fairlearn
    scikit-learn < 1.2.0
    tensorflow
    seaborn
    cvxpy

[options.packages.find]
where = src